Реализовал доступы соответственно ролям
1. Теперь юзерам отображаются страницы и юзеры имеют доступы не по признаку роли, а по тому, какие доступы роль имеет
2. Роли определяются из конфига
3. Добавил класс PermissionsConstant для определения типа claims
4. Теперь в классе RoleService метод GetRolesNameByUserId возвращает не названия ролей, а роли целиком (без юзеров)
5. Теперь в классе AccountController в методе Login в claims добавляются на названия ролей, а названия доступов
6. атрибуты Authorize заменил на кастомный атрибут Access

+ исправил баг с созданием файла для базы

--- a/TimeSheet.Web/Views/Shared/_Layout.cshtml
+++ b/TimeSheet.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using System.Security.Claims
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Services.Configuration
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,37 +27,40 @@
 
                         @if (User.Identity.IsAuthenticated)
                         {
-                            var userRoles = User.Claims.Where(c => c.Type == ClaimsIdentity.DefaultRoleClaimType).Select(claim => claim.Value).ToList();
+                            var userRoles = User.Claims.Where(c => c.Type == PermissionsConstant.ClaimType).Select(claim => claim.Value).ToList();
 
-                            if (userRoles.Contains("Employee"))
+                            if (userRoles.Contains("AddTimeSheet"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="TimeSheet" asp-action="Create">Time sheet adding window</a>
                                 </li>
                             }
 
-                            if (userRoles.Contains("Manager"))
+                            if (userRoles.Contains("ViewScopes"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Scope" asp-action="Scopes">All-time Spending</a>
                                 </li>
                             }
 
-                            if (userRoles.Contains("HR"))
+                            if (userRoles.Contains("ViewEmployees"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Employees">Annual Spending</a>
                                 </li>
                             }
 
-                            if (userRoles.Contains("Admin"))
+                            if (userRoles.Contains("EditUser"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangePassword">Edit user</a>
+                                </li>
+                            }
+
+                            if (userRoles.Contains("ViewRates"))
                             {
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Currency" asp-action="Currencies">Exchange rates</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="ChangePassword">Edit user</a>
                                 </li>
                             }
 
